# sdl_wrapper

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
src/sandbox/: App.cpp
src/software_3d_engine/: Engine.hpp
src/software_3d_engine/Engine/: Application.cpp  Application.hpp  EntryPoint.hpp  Error.cpp  Error.hpp
src/software_3d_engine/Engine/Events/: Events.hpp
src/software_3d_engine/Engine/Primitives/: Dimension.hpp  Position.hpp  Typedefs.hpp
src/software_3d_engine/Engine/SDL/: VideoSubsystem.cpp  VideoSubsystem.hpp  Window.cpp  Window.hpp  WindowBuilder.cpp  WindowBuilder.hpp  context.cpp  context.hpp
src/software_3d_engine/Engine/Streams/: InputStream.cpp  InputStream.hpp  OutputStream.cpp  OutputStream.hpp  StringBuilder.cpp  StringBuilder.hpp
